@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.673 2023/09/04 08:11:05 wiz Exp $
+# $NetBSD: Makefile,v 1.674 2023/09/04 09:34:14 wiz Exp $
 #
 
 COMMENT=	Audio tools, players, and libraries
@@ -357,9 +357,7 @@ SUBDIR+=	p5-CDDB_get
 SUBDIR+=	p5-MP3-Info
 SUBDIR+=	p5-MP3-Tag
 SUBDIR+=	p5-MPEG-Audio-Frame
-SUBDIR+=	p5-MusicBrainz-Client
 SUBDIR+=	p5-MusicBrainz-DiscID
-SUBDIR+=	p5-MusicBrainz-Queries
 SUBDIR+=	paman
 SUBDIR+=	paprefs
 SUBDIR+=	parlatype
