@@ -1,5 +1,0 @@
-This module provides access to the libmusicbrainz client library
-from perl.
-
-For more information about the MusicBrainz project visit the projects
-website at http://www.musicbrainz.org/
