@@ -1,5 +1,0 @@
-$NetBSD: distinfo,v 1.7 2021/10/26 09:59:21 nia Exp $
-
-BLAKE2s (MusicBrainz-Client-0.11.tar.gz) = ef098a382dca1101fd5e0b5ec00419d3f9f0c8be7035d719e221785b2bfb6a0c
-SHA512 (MusicBrainz-Client-0.11.tar.gz) = 623e9c158a25e7e89db3596d66f63a6f1b5d11b0454f4621474d9938ec3ea2bfe3c66fbde8d1b6bde7d87b29f2c1669d572225cd66e3df1c3bdd2874b9ba2fd3
-Size (MusicBrainz-Client-0.11.tar.gz) = 23300 bytes
