@@ -1,5 +1,0 @@
-This module provides access to the Music Brainz RDF Query Constants
-from perl.
-
-For more information about the Music Brainz project visit the
-projects website at http://www.musicbrainz.org/
